--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.10.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.0",
     "uuid": "^9.0.1"
@@ -28,6 +27,7 @@
     "eslint": "^8.55.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5.2.2",
     "vite": "^5.0.8"
   }
